--- a/src/Web/Web.csproj
+++ b/src/Web/Web.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
@@ -9,7 +9,6 @@
     <ItemGroup>
       <Folder Include="wwwroot\css\dev\" />
       <Folder Include="wwwroot\img\icons\" />
-      <Folder Include="wwwroot\js\" />
       <Folder Include="wwwroot\lib\" />
     </ItemGroup>
 
@@ -26,6 +25,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Htmx.TagHelpers" Version="1.6.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.14">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
