--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -19,4 +19,8 @@
       <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.8.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Exceptions\" />
+    </ItemGroup>
+
 </Project>
