--- a/src/WebBlazor/WebBlazor.csproj
+++ b/src/WebBlazor/WebBlazor.csproj
@@ -31,6 +31,7 @@
 
     <ItemGroup>
       <Folder Include="Components\Dynamic\" />
+      <Folder Include="wwwroot\css\dev\" />
     </ItemGroup>
 
 </Project>
