--- a/src/WebBlazor/WebBlazor.csproj
+++ b/src/WebBlazor/WebBlazor.csproj
@@ -14,6 +14,7 @@
 
     <ItemGroup>
       <PackageReference Include="Blazored.FluentValidation" Version="2.1.0" />
+      <PackageReference Include="Htmx.TagHelpers" Version="1.6.2" />
       <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
         <PrivateAssets>all</PrivateAssets>
