--- a/src/WebBlazor/WebBlazor.csproj
+++ b/src/WebBlazor/WebBlazor.csproj
@@ -32,7 +32,7 @@
 
     <ItemGroup>
       <Folder Include="Components\Dynamic\" />
+      <Folder Include="Components\Static\" />
       <Folder Include="wwwroot\css\dev\" />
     </ItemGroup>
-
 </Project>
