Applied authorization rules to pages requiring user login.

--- a/src/WebClient/WebClient.csproj
+++ b/src/WebClient/WebClient.csproj
@@ -26,6 +26,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Pages\" />
       <Folder Include="ProxyRepositories\" />
       <Folder Include="wwwroot\js\" />
     </ItemGroup>
