--- a/Server/src/Server.Components/Server.Components.csproj
+++ b/Server/src/Server.Components/Server.Components.csproj
@@ -13,6 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Blazored.FluentValidation" Version="2.1.0" />
         <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.1" />
     </ItemGroup>
 
