--- a/Server/src/Server.Application/Server.Application.csproj
+++ b/Server/src/Server.Application/Server.Application.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\..\Shared\src\Shared.Extensions\Shared.Extensions.csproj" />
       <ProjectReference Include="..\..\..\Shared\src\Shared.Services\Shared.Services.csproj" />
     </ItemGroup>
     
