--- a/Client/src/Client.Application/Client.Application.csproj
+++ b/Client/src/Client.Application/Client.Application.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\..\Shared\src\Shared.Extensions\Shared.Extensions.csproj" />
       <ProjectReference Include="..\..\..\Shared\src\Shared.Services\Shared.Services.csproj" />
     </ItemGroup>
 
