Finished implementing basic checkout page functionality.

--- a/Client/src/Client.Web/Client.Web.csproj
+++ b/Client/src/Client.Web/Client.Web.csproj
@@ -5,6 +5,7 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <RootNamespace>SunRaysMarket.Client.Web</RootNamespace>
+        <BlazorCacheBootResources>false</BlazorCacheBootResources>
     </PropertyGroup>
 
     <ItemGroup>
