--- a/Client/src/Client.Web/Client.Web.csproj
+++ b/Client/src/Client.Web/Client.Web.csproj
@@ -5,7 +5,7 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <RootNamespace>SunRaysMarket.Client.Web</RootNamespace>
-        <BlazorCacheBootResources>false</BlazorCacheBootResources>
+       <!-- <BlazorCacheBootResources>false</BlazorCacheBootResources> -->
     </PropertyGroup>
 
     <ItemGroup>
@@ -14,11 +14,8 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\..\Shared\src\Shared.Components\Shared.Components.csproj" />
         <ProjectReference Include="..\Client.Components\Client.Components.csproj"/>
-    </ItemGroup>
-
-    <ItemGroup>
-        <Folder Include="Pages\"/>
     </ItemGroup>
 
     <ItemGroup>
@@ -29,6 +26,14 @@
         <_ContentIncludedByDefault Remove="wwwroot\icon-192.png"/>
         <_ContentIncludedByDefault Remove="wwwroot\index.html"/>
         <_ContentIncludedByDefault Remove="wwwroot\sample-data\weather.json"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <AdditionalFiles Include="Pages\ShoppingCart.razor" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Pages\" />
     </ItemGroup>
 
 </Project>
