--- a/Server/src/Server.Application/Server.Application.csproj
+++ b/Server/src/Server.Application/Server.Application.csproj
@@ -15,6 +15,7 @@
 
     <ItemGroup>
         <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0"/>
+        <PackageReference Include="System.Linq.Async" Version="6.0.1" />
     </ItemGroup>
 
     <ItemGroup>
