--- a/Server/src/Server.Web/Server.Web.csproj
+++ b/Server/src/Server.Web/Server.Web.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <RootNamespace>SunRaysMarket.Server.Web</RootNamespace>
+        <UserSecretsId>07582da5-324b-470c-bc63-875af3f26abb</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
