Remove local path hints from package references

--- a/Client/src/Client.Application/Client.Application.csproj
+++ b/Client/src/Client.Application/Client.Application.csproj
@@ -11,17 +11,9 @@
         <ProjectReference Include="..\..\..\Shared\src\Shared.Extensions\Shared.Extensions.csproj"/>
         <ProjectReference Include="..\..\..\Shared\src\Shared.Services\Shared.Services.csproj"/>
     </ItemGroup>
-
+    
     <ItemGroup>
-        <Reference Include="Microsoft.Extensions.DependencyInjection.Abstractions">
-            <HintPath>..\..\..\..\..\..\..\..\.nuget\packages\microsoft.aspnetcore.app.ref\8.0.0\ref\net8.0\Microsoft.Extensions.DependencyInjection.Abstractions.dll</HintPath>
-        </Reference>
-    </ItemGroup>
-
-    <ItemGroup>
-        <Reference Include="Microsoft.Extensions.DependencyInjection.Abstractions">
-            <HintPath>..\..\..\..\..\..\..\..\.nuget\packages\microsoft.aspnetcore.app.ref\8.0.0\ref\net8.0\Microsoft.Extensions.DependencyInjection.Abstractions.dll</HintPath>
-        </Reference>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
     </ItemGroup>
 
 </Project>
