--- a/Server/src/Server.Components/Server.Components.csproj
+++ b/Server/src/Server.Components/Server.Components.csproj
@@ -35,11 +35,9 @@
         <_ContentIncludedByDefault Remove="wwwroot\background.png"/>
         <_ContentIncludedByDefault Remove="wwwroot\exampleJsInterop.js"/>
     </ItemGroup>
-
+    
     <ItemGroup>
-        <Reference Include="Microsoft.AspNetCore.Http.Abstractions">
-            <HintPath>..\..\..\..\..\..\..\..\.nuget\packages\microsoft.aspnetcore.app.ref\8.0.1\ref\net8.0\Microsoft.AspNetCore.Http.Abstractions.dll</HintPath>
-        </Reference>
+        <FrameworkReference Include="Microsoft.AspNetCore.App" />
     </ItemGroup>
 
 </Project>
