--- a/Shared/src/Shared.Extensions/Shared.Extensions.csproj
+++ b/Shared/src/Shared.Extensions/Shared.Extensions.csproj
@@ -6,11 +6,9 @@
         <Nullable>enable</Nullable>
         <RootNamespace>SunRaysMarket.Shared.Extensions</RootNamespace>
     </PropertyGroup>
-
+    
     <ItemGroup>
-        <Reference Include="Microsoft.Extensions.DependencyInjection.Abstractions">
-            <HintPath>..\..\..\..\..\..\..\..\.nuget\packages\microsoft.aspnetcore.app.ref\8.0.0\ref\net8.0\Microsoft.Extensions.DependencyInjection.Abstractions.dll</HintPath>
-        </Reference>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
     </ItemGroup>
 
 </Project>
