Allow  machines on local network to send request to dev server.

--- a/Server/src/Server.Web/appsettings.Development.json
+++ b/Server/src/Server.Web/appsettings.Development.json
@@ -9,6 +9,9 @@
     "Endpoints": {
       "Http": {
         "Url": "http://*:5164"
+      },
+      "Https": {
+        "Url": "https://*:7220"
       }
     }
   }
